# TLE-Elimination

./: .gitignore  CHANGELOG.md  Funcs.hs  Main.hs  README.md  tle-elimination.cabal  tlelimination.cabal
MyTest/: MyTest.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
test/: Funcs.hs  MyTest.hs
