name:                tlelimination
version:             0.1.0.0
synopsis:            A time-consuming elimination game
-- license:             MIT
-- license-file:        LICENSE
author:              groupTLE
maintainer:          zhihu@umich.edu
category:            Game
build-type:          Simple
cabal-version:       >= 1.10

executable tlelimination
  main-is:           Main.hs
  ghc-options:       -Wall -O2 -threaded
  build-depends:     base >= 4.7
                     , random >= 1.1
                     , hspec >= 2.2
                     , QuickCheck >= 2.5.1
                     , random-shuffle == 0.0.4
                     , gloss-juicy >= 0.1.2
                     , parallel-io >= 0.0.0
                     , gloss==1.13.2.2, random==1.2.1.1, containers==0.6.5.1,set-extra==1.4.1

  default-language:  Haskell2010

test-suite test-testsuite
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           MyTest.hs
  other-modules:     Funcs
  ghc-options:       -Wall
  build-depends:     base >= 4.7
                     , hspec >= 2.2
                     , QuickCheck >= 2.5.1
                     , containers == 0.6.5.1
                     , filepath==1.4.100.0
                     , process==1.6.9.0
                     , parallel-io==0.3.5
                     , random-shuffle == 0.0.4
                     , gloss-juicy >= 0.1.2
                     , parallel-io >= 0.0.0
                     , gloss==1.13.2.2, random==1.2.1.1, set-extra==1.4.1
                     

  default-language:  Haskell2010


