name:                tlelimination
version:             0.1.0.0
synopsis:            A time-consuming elimination game
-- license:             MIT
-- license-file:        LICENSE
author:              groupTLE
maintainer:          zhihu@umich.edu
category:            Game
build-type:          Simple
cabal-version:       >= 1.10

executable tlelimination
  main-is:           Main.hs
  ghc-options:       -Wall -O2 -threaded
  build-depends:     base >= 4.7
                     , random >= 1.1
                     , gloss >= 1.9.2.1
                     , hspec >= 2.2
                     , QuickCheck >= 2.5.1

  default-language:  Haskell2010

-- test-suite spec
--   type:              exitcode-stdio-1.0
--   hs-source-dirs:    spec
--   main-is:           Spec.hs
--   ghc-options:       -Wall
--   build-depends:     base >= 4.7
--                      , random >= 1.1
--                      , gloss >= 1.9.2.1
--                      , hspec >= 2.2
--                      , QuickCheck >= 2.5.1

--   default-language:  Haskell2010
